--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,52 +9,54 @@
     <script src="./index.js" defer></script>
     <title>Document</title>
 </head>
+
 <body>
 
     <nav class="nav-bar">
-      <h3>Awsome Books</h3>
-      <ul class="nav-list">
-        <li><a href="#" id="bookList">Book List</a></li>
-        <li><a href="#" id="addBook">Add a book</a></li>
-        <li><a href="#" id="contact">Contact</a></li>
-      </ul>
+        <ul class="nav-list">
+            <li><a href="#" id="bookList">REPOSITORY</a></li>
+            <li><a href="#" id="addBook">ADD A BOOK</a></li>
+            <li><a href="#" id="contact">CONTACT</a></li>
+        </ul>
     </nav>
     <div class="bigcontainer">
-      <div class="containerSection">
-        <section id="booklistSection" class="noShow">
-          <h2>Welcome to Library Section</h2>
-          <div class="library">
-          </div>
-        </section>
-        <section id="main-screen">
-          <div class="main-screen">
-            <h2>Welcome Bookie!</h2>
-            <form id="form-container">
-              <input type="text" class="title" id="bookTitle" placeholder="Title" name="formTitle">
-              <input type="text" class="author" id="bookAuthor" placeholder="Author" name="formAuthor">
-              <div class="containerbutton">
-                <button type="submit" class="add-button">Submit</button>
-              </div>
-            </form>
-          </div>
-        </section>
-  
-        <section id="contact-section">
-          <div class="contact-container">
-            <h2>Contact Information</h2>
-            <p>Do you have any question? or you just want to say 'Hello'?</p>
-            <div class="info-container">
-              <div class="Dinfo">
-                <h3>Github: @dgcuenca</h3>
-                <h3>Email: web3.0develope@gmail.com</h3>
-              </div>
-            </div>
-          </div>
-        </section>
-      </div>
-      <footer>
-        <p>Copyright: 2022-2025 AwsomeBook's. All Rights Reserved </p>
-      </footer>
+        <h1>Awsome Books</h1>
+        <div class="containerSection">
+            <section id="booklistSection">
+                <h2>Library Section</h2>
+                <div class="library">
+                </div>
+            </section>
+            <section id="main-screen">
+                <div class="main-screen">
+                    <h2>Add to Library</h2>
+                    <form id="form-container">
+                        <input type="text" class="title" id="bookTitle" placeholder="Title" name="formTitle">
+                        <input type="text" class="author" id="bookAuthor" placeholder="Author" name="formAuthor">
+                        <div class="containerbutton">
+                            <button type="submit" class="add-button">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </section>
+            <section id="contact-section">
+                <div class="contact-container">
+                    <h2>Contact Information</h2>
+                    <p>Do you have any question? or you just want to say 'Hello'?</p>
+                    <div class="info-container">
+
+                        <div class="Dinfo">
+                            <h3>Github: @dgcuenca</h3>
+                            <h3>Email: web3.0develope@gmail.com</h3>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <footer>
+            <p>Copyright: 2022-2025 AwsomeBook's. All Rights Reserved </p>
+        </footer>
     </div>
-  </body>
+</body>
+
 </html>
