Link clock in NavBar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <li><a href="#" id="addBook">ADD A BOOK</a></li>
             <li><a href="#" id="contact">CONTACT</a></li>
         </ul>
+        <div class="date">
+
+        </div>
     </nav>
     <div class="bigcontainer">
         <h1>Awsome Books</h1>
