Target corretly a element to delete

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="containerSection">
             <section id="booklistSection">
                 <h2>Library Section</h2>
-                <div class="library">
+                <div class="library" id="libraryId">
                 </div>
             </section>
             <section id="main-screen">
